--- a/src/email-list/EmailList.module.css
+++ b/src/email-list/EmailList.module.css
@@ -7,5 +7,15 @@
 		border: 1px solid #2e2e2e;
 		padding: 1rem;
 		margin-bottom: 1rem;
+		animation: animation-start-email 0.3s ease-in-out;
+	}
+}
+
+@keyframes animation-start-email {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
 	}
 }
